	  fixing errors in MinGW + CYGWIN

2020-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): adjusted version output for JSON and MPIR
	* typeck.c: adjusted check of defines for JSON

2020-09-27  Robert Dubner <rdubner-s@users.sf.net>

	* codegen.c (output_cobol_info): emit doubled backslashes for source file

2020-09-22  James K. Lowden  <jklowden@symas.com>

	* flag.def (fintrinsics): remove extraneous newline in output

2020-09-08  Simon Sobisch <simonsobisch@gnu.org>

	* ppparse.y: slightly improved directive errors, still much work to do

2020-09-08  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppinput): skip last line if it only contains spaces
	* tree.c (literal_for_diagnostic), tree.h, scanner.l: extracted
	  (literal_for_diagnostic) from scanner.l (error_literal), extended and
	  used in tree.c to provide a single function to resolve literals

2020-09-03  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l (read_literal): catch and error  missing termination of literal


2020-09-02  James K. Lowden  <jklowden@fig.schemamania.org>

	* cobc.c, error.c: prevent messages from overflowing message buffer

2020-09-01  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (codegen_init): fixed broken codegen for multi-source compiles
	  introduced when fixing bug #666

2020-07-30  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_call): don't setup exceptions for static CALLs

2020-07-27  Simon Sobisch <simonsobisch@gnu.org>

	refactored codegen, now using a loop instead of a recursive call
	fixing bug #666
	* codegen.c, cobc.c, tree.h: split (codegen) into
	  (codegen_init, codegen_internal, codegen_finalize);
	  moved more initialization to codegen_init;
	  limit variable scope and use of static variables

2020-07-26  Edward Hart <edward.dan.hart@gmail.com>

	* config.def: added possible values for assign-clause and
	  screen-section-rules.

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>
