@@ -89,7 +89,7 @@ CB_CONFIG_ANY (enum cb_dpc_in_data_options, cb_dpc_in_data, "dpc-in-data",
 /* Normal boolean flags */
 
 CB_CONFIG_BOOLEAN (cb_filename_mapping, "filename-mapping",
-	_("resolve file names at run time using environment variables."))
+	_("resolve file names at run time using environment variables"))
 
 CB_CONFIG_BOOLEAN (cb_pretty_display, "pretty-display",
 	_("alternate formatting of numeric fields"))
@@ -115,8 +115,11 @@ CB_CONFIG_BOOLEAN (cb_relax_level_hierarchy, "relax-level-hierarchy",
 CB_CONFIG_BOOLEAN (cb_select_working, "select-working",
 	_("require ASSIGN USING items to be in WORKING-STORAGE"))
 
+CB_CONFIG_BOOLEAN (cb_local_implies_recursive, "local-implies-recursive",
+	_("LOCAL-STORAGE SECTION implies RECURSIVE attribute"))
+
 CB_CONFIG_BOOLEAN (cb_sticky_linkage, "sticky-linkage",
-	_("LINKAGE-SECTION items remain allocated between invocations"))
+	_("LINKAGE SECTION items remain allocated between invocations"))
 
 CB_CONFIG_BOOLEAN (cb_move_ibm, "move-ibm",	/* counterpart for MF's BYTE-MODE-MOVE */
 	_("MOVE operates as on IBM (left to right, byte by byte)"))
