@@ -47,7 +47,7 @@ pic-length:			50
 
 # Default assign type
 # Value: 'dynamic', 'external'
-assign-clause:			dynamic # TO-DO: Verify
+assign-clause:			external
 
 # If yes, file names are resolved at run time using
 # environment variables.
@@ -118,7 +118,10 @@ move-ibm:			no
 # SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
 select-working:			no
 
-# If yes, linkage-section items remain allocated
+# LOCAL-STORAGE SECTION implies RECURSIVE attribute
+local-implies-recursive:		no # not verified yet
+
+# If yes, LINKAGE SECTION items remain allocated
 # between invocations.
 sticky-linkage:			no # TO-DO: Check!
 
