@@ -45,7 +45,8 @@ pic-length:				50
 
 # Default assign type
 # Value: 'dynamic', 'external'
-assign-clause:			dynamic # TO-DO: Verify!
+# Note: standard COBOL supports neither of them but has USING data-name for DYNAMIC
+assign-clause:			external
 
 # If yes, file names are resolved at run time using
 # environment variables.
@@ -114,9 +115,12 @@ arithmetic-osvs:		no
 move-ibm:			no
 
 # SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
-select-working:			no
+select-working:		no
 
-# If yes, linkage-section items remain allocated
+# LOCAL-STORAGE SECTION implies RECURSIVE attribute
+local-implies-recursive:		no
+
+# If yes, LINKAGE SECTION items remain allocated
 # between invocations.
 sticky-linkage:			no
 
