@@ -54,7 +54,7 @@ pic-length:			255
 
 # Default assign type
 # Value: 'dynamic', 'external'
-assign-clause:			dynamic # TO-DO: Verify!
+assign-clause:			dynamic
 
 # If yes, file names are resolved at run time using
 # environment variables.
@@ -125,7 +125,10 @@ move-ibm:			no
 # SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
 select-working:		no
 
-# If yes, linkage-section items remain allocated
+# LOCAL-STORAGE SECTION implies RECURSIVE attribute
+local-implies-recursive:		no
+
+# If yes, LINKAGE SECTION items remain allocated
 # between invocations.
 sticky-linkage:			no
 
