@@ -119,7 +119,10 @@ move-ibm:			no
 # SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
 select-working:			no
 
-# If yes, linkage-section items remain allocated
+# LOCAL-STORAGE SECTION implies RECURSIVE attribute
+local-implies-recursive:		yes
+
+# If yes, LINKAGE SECTION items remain allocated
 # between invocations.
 sticky-linkage:			no
 
