@@ -116,7 +116,10 @@ move-ibm:			no # to check
 # SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
 select-working:			yes # yes for ASSIGN, to check for RELATIVE KEY
 
-# If yes, linkage-section items remain allocated
+# LOCAL-STORAGE SECTION implies RECURSIVE attribute
+local-implies-recursive:		no
+
+# If yes, LINKAGE SECTION items remain allocated
 # between invocations.
 sticky-linkage:			no
 
