@@ -48,7 +48,9 @@ pic-length:				30
 
 # Default assign type
 # Value: 'dynamic', 'external'
-assign-clause:			dynamic # TO-DO: Verify!
+# Note: standard COBOL supports neither of them, later have USING data-name for DYNAMIC
+#       but X/Open added ASSIGN TO data-name, so go with dynamic
+assign-clause:			dynamic
 
 # If yes, file names are resolved at run time using
 # environment variables.
@@ -117,9 +119,12 @@ arithmetic-osvs:		no
 move-ibm:			no
 
 # SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
-select-working:			no
+select-working:		no
 
-# If yes, linkage-section items remain allocated
+# LOCAL-STORAGE SECTION implies RECURSIVE attribute
+local-implies-recursive:		no
+
+# If yes, LINKAGE SECTION items remain allocated
 # between invocations.
 sticky-linkage:			no
 
